--- a/cvblog/templates/blog/post_list.html
+++ b/cvblog/templates/blog/post_list.html
@@ -1,19 +1,12 @@
-<html>
-    <head>
-        <title>Central Vibe</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Central Vibe</a></h1>
-        </div>
-
-		{% for post in posts %}
-			<div>
-				<p> Published: {{post.published_date}} </p>
-				<h1>Title: {{post.title}}</h1>
-				<p>{{post.content|linebreaks}}</p>
+{% extends 'blog/base.html' %}
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				<p>published: {{ post.published_date }}</p>
 			</div>
-			<hr />
-		{% endfor %}
-    </body>
-</html>
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.content|linebreaks }}</p>
+		</div>
+	{% endfor %}
+{% endblock %}
