--- a/cvblog/templates/blog/base.html
+++ b/cvblog/templates/blog/base.html
@@ -18,7 +18,10 @@
   </head>
   <body>
 		<div class="page-header">
-			<h1><a href="">Central Vibe</a></h1>
+			{% if user.is_authenticated %}
+				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">New</span></a>
+			{% endif %}
+			<h1><a href="{% url 'post_list'%}">Central Vibe</a></h1>
 		</div>
 
 		<div class="content container">
