--- a/cvblog/templates/blog/post_detail.html
+++ b/cvblog/templates/blog/post_detail.html
@@ -2,11 +2,17 @@
 
 {% block content %}
 	<div class="post">
+	
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
         {% endif %}
+		
+		{% if user.is_authenticated %}
+			<a class = "btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil">EDIT</span></a> 
+		{% endif %}
+		
         <h1>{{ post.title }}</h1>
         <p>{{ post.content|linebreaks }}</p>
     </div>
